--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+.keep
 
 # Directories potentially created on remote AFP share
 .AppleDB
